Comment out Calculator

--- a/src/app/pages/adoption-confirmation/adoption-confirmation.scss
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.scss
@@ -3,11 +3,11 @@
 .confirmation-page {
 
     .subhead {
-        padding-bottom: 3rem;
+        padding-bottom: 8rem;
     }
 
-    .add-another {
-        padding-top: 5rem;
+    .strips {
+        margin-bottom: 0;
     }
 
     .calculator {
