--- a/src/app/pages/comp-copy-confirmation/comp-copy-confirmation.hbs
+++ b/src/app/pages/comp-copy-confirmation/comp-copy-confirmation.hbs
@@ -1,6 +1,6 @@
 <style scoped>
     @import url(/app/pages/comp-copy-confirmation/comp-copy-confirmation.css);
-    @import url(/app/components/calculator/calculator.css);
+{{!--    @import url(/app/components/calculator/calculator.css); --}}
 </style>
 
 <div class="page-intro">
@@ -10,19 +10,21 @@
             A member of our Customer Service team will contact you with a code for your
             free iBooks copy within one to two business days.
         </p>
+        {{!--
         <p class="blurb-calculator">
             Use the calculator below to find out how much money you can save your students over the next three years when you adopt OpenStax.
         </p>
         <a href="#savings-calculator" class="caret"></a>
+        --}}
     </div>
 </div>
 
 <div class="wrapper">
     {{{strips}}}
     <div class="text-content labeled-inputs row book-info">
+        {{!--
         <div class="calculator">
         </div>
-        {{!--
         <div id="support-box" class="support-box">
             <h2>Support OpenStax College!</h2>
             <form>
