--- a/src/app/pages/faculty-confirmation/faculty-confirmation.hbs
+++ b/src/app/pages/faculty-confirmation/faculty-confirmation.hbs
@@ -1,6 +1,6 @@
 <style scoped>
     @import url(/app/pages/faculty-confirmation/faculty-confirmation.css);
-    @import url(/app/components/calculator/calculator.css);
+{{!--    @import url(/app/components/calculator/calculator.css); --}}
 </style>
 
 <div class="page-intro">
@@ -12,19 +12,21 @@
             business days about your approval. Once approved, you will be able to access
             all of our instructor-only resources.
         </p>
+        {{!--
         <p class="blurb-calculator">
             Use the calculator below to find out how much money you can save your students over the next three years when you adopt OpenStax.
         </p>
         <a href="#savings-calculator" class="caret"></a>
+        --}}
     </div>
 </div>
 
 <div class="wrapper">
     {{{strips}}}
     <div class="text-content labeled-inputs row book-info">
+        {{!--
         <div class="calculator">
         </div>
-        {{!--
         <div id="support-box" class="support-box">
             <h2>Support OpenStax College!</h2>
             <form>
