--- a/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
+++ b/src/app/pages/adoption-confirmation/adoption-confirmation.hbs
@@ -1,6 +1,6 @@
 <style scoped>
     @import url(/app/pages/adoption-confirmation/adoption-confirmation.css);
-    @import url(/app/components/calculator/calculator.css);
+{{!--    @import url(/app/components/calculator/calculator.css); --}}
 </style>
 
 <div class="page-intro">
@@ -11,11 +11,11 @@
             are joining thousands of educators in providing greater access to quality
             learning resources for your students.
         </p>
-        <p class="blurb-calculator">
+        {{!--<p class="blurb-calculator">
             Use the calculator below to find out how much money you will save your
             students over the next three years.
         </p>
-        <a href="#savings-calculator" class="caret"></a>
+        <a href="#savings-calculator" class="caret"></a> --}}
     </div>
 </div>
 
@@ -29,9 +29,9 @@
             <a href="/adoption" title="add another book" class="btn">Add another book</a>
             <a href="/subjects" title="go back to our books" class="btn btn-secondary">Go back to our books</a>
         </div>
+        {{!--
         <div class="calculator">
         </div>
-        {{!--
         <div id="support-box" class="support-box">
             <h2>Support OpenStax College!</h2>
             <form>
