--- a/src/app/pages/interest-confirmation/interest-confirmation.hbs
+++ b/src/app/pages/interest-confirmation/interest-confirmation.hbs
@@ -1,6 +1,6 @@
 <style scoped>
     @import url(/app/pages/interest-confirmation/interest-confirmation.css);
-    @import url(/app/components/calculator/calculator.css);
+{{!--    @import url(/app/components/calculator/calculator.css); --}}
 </style>
 
 <div class="page-intro">
@@ -12,10 +12,12 @@
             free textbooks and low-cost learning tools that are revolutionizing
             classrooms across the country and the world.
         </p>
+        {{!--
         <p class="blurb-calculator">
             Use the calculator below to find out how much money you can save your students over the next three years when you adopt OpenStax.
         </p>
         <a href="#savings-calculator" class="caret"></a>
+        --}}
     </div>
 </div>
 
