--- a/src/app/pages/interest-confirmation/interest-confirmation.scss
+++ b/src/app/pages/interest-confirmation/interest-confirmation.scss
@@ -3,6 +3,10 @@
 .confirmation-page {
 
     .subhead {
-        padding-bottom: 3rem;
+        padding-bottom: 8rem;
+    }
+
+    .strips {
+        margin-bottom: 0;
     }
 }
