Display table of contents in pop-up on Details page
Created contents view
Populated from detail data table_of_contents.contents
Triggered by Table of Contents link

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -8,7 +8,8 @@
                 <section class="details">
                     <h1 class="title"></h1>
                     <div class="tabs">
-                        <a class="tab"><span>Table of Contents</span></a>
+                        <a class="table-of-contents-link" class="tab"><span>Table of Contents</span></a>
+                        <div class="table-of-contents-container hidden"></div>
                         <a href="#resources" class="tab"><span>Resources</span></a>
                         <a href="#details" class="tab"><span>Details</span></a>
                         <a href="#errata" class="tab"><span>Errata</span></a>
