Use allies query from API
Insert copy from API into allies page
Include allies resources on details page

--- a/src/app/pages/allies/allies.hbs
+++ b/src/app/pages/allies/allies.hbs
@@ -3,12 +3,8 @@
 </style>
 <div class="hero">
     <div class="container">
-        <h1>Friends in HigherEd Places.</h1>
-        <p class="subhead">
-            OpenStax allies provide additional tools alongside our OpenStax texts.
-            We share the belief that as allies, we can go further to change education
-            and make high­quality learning materials affordable and accessible.
-        </p>
+        <h1 id="page-title"></h1>
+        <p id="page-subhead" class="subhead"></p>
     </div>
 </div>
 <div class="blurbs">
