--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -70,13 +70,14 @@
             <div class="row">
             <h3>Ally Resources</h3>
             <p>Learn more about our <a href="/allies">allies</a>.</p>
+            <div id='allies'></div>
             </div>
             <div class="row">
                 <h3>Student Resources</h3>
                 <div id="student-resources" class="resource"></div>
             </div>
-            <div class="cta">
-                <a class="btn">Learn how you can tell your instructor about OpenStax!</a>
+            <div class="cta hidden">
+                <a class="btn handbook-link">Learn how you can tell your instructor about OpenStax!</a>
             </div>
         </div>
         </section>
@@ -98,7 +99,7 @@
                     suggestion and make necessary changes.
                 </p>
                 <ul class="links">
-                    <li><a class="go-to">Errata list</a></li>
+                    <li><a class="go-to errata-link">Errata list</a></li>
                     <li><a class="go-to">Suggest a correction</a></li>
                 </ul>
             </div>
