Display allies info blocks on Details page

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -70,7 +70,7 @@
             <div class="row">
             <h3>Ally Resources</h3>
             <p>Learn more about our <a href="/allies">allies</a>.</p>
-            <div id='allies'></div>
+            <div id='allies' class="resource"></div>
             </div>
             <div class="row">
                 <h3>Student Resources</h3>
