--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -361,6 +361,10 @@
         }
     }
 
+    .logo > img {
+        max-width: 20rem;
+    }
+
     .errata {
         font-size: 1.6rem;
         line-height: 2.6rem;
