Change name of select field
Changed from Role_c to 00NU00000054MLz

--- a/src/app/pages/finish-profile/finish-profile.hbs
+++ b/src/app/pages/finish-profile/finish-profile.hbs
@@ -27,7 +27,7 @@
             <input name="phone" type="text" required />
         </label>
         <p>Your role
-        <select name="Role_c">
+        <select name="00NU00000054MLz">
             <option disabled selected>Please select</option>
             {{#each roles}}
                 <option value="{{this}}">{{this}}</option>
