--- a/src/app/pages/allies/ally/ally.hbs
+++ b/src/app/pages/allies/ally/ally.hbs
@@ -1,7 +1,7 @@
 {{#if logoUrl}}<div class="logo"><img src="{{logoUrl}}" /></div>{{/if}}
 <div class="text">
     <h2>{{name}}</h2>
-    {{{blurb}}}
+    <p>{{{blurb}}}</p>
     {{#each bookLinks}}
     <a href="{{url}}" data-subject="{{subject}}">{{title}}</a>
     {{/each}}
