--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -9,7 +9,9 @@
                     <h1 class="title"></h1>
                     <div class="tabs">
                         <a class="table-of-contents-link" class="tab"><span>Table of Contents</span></a>
-                        <div class="table-of-contents-container hidden"></div>
+                        <div class="table-of-contents hidden">
+                            <div class="box"></div>
+                        </div>
                         <a href="#resources" class="tab"><span>Resources</span></a>
                         <a href="#details" class="tab"><span>Details</span></a>
                         <a href="#errata" class="tab"><span>Errata</span></a>
