--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -15,15 +15,53 @@
         cursor: pointer;
     }
 
-    .table-of-contents-container {
-        background-color: color(neutral-lightest);
-        box-shadow: 0 0 1rem color(neutral-dark);
-        padding: 1rem;
-        position: absolute;
+    .table-of-contents {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 100%;
+        width: 100%;
         z-index: 100;
+        overflow-y: auto;
+        opacity: 1;
+        transition: opacity 0.3s;
 
-        .subunit {
-            margin-left: 1rem;
+        @include desktop {
+            background-color: rgba(color(neutral-dark), 0.90);
+        }
+
+        &.hidden {
+            display: initial;
+            width: 0;
+            height: 0;
+            overflow: hidden;
+            opacity: 0;
+        }
+
+        .box {
+            background-color: rgba(color(neutral-lightest), 0.97);
+            padding: 7.5rem 1.5rem 1.5rem;
+            font-weight: 500;
+
+            @include desktop {
+                position: absolute;
+                left: 50%;
+                top: 60%;
+                padding: 1.5rem;
+                max-width: 60rem;
+                width: 100%;
+                max-height: 60rem;
+                overflow-y: auto;
+                transform: translate3d(-50%, -60%, 0);
+            }
+
+            .subunit {
+                margin-left: 1.5rem;
+                font-weight: 300;
+            }
+
         }
     }
 
@@ -100,6 +138,7 @@
                 width: 100%;
                 transform: translate3d(-50%, 0, 0);
                 z-index: 1;
+                margin-bottom: 0;
             }
 
             .box {
