Removed colons from headings

--- a/src/app/pages/accessibility-statement/accessibility-statement.hbs
+++ b/src/app/pages/accessibility-statement/accessibility-statement.hbs
@@ -11,12 +11,12 @@
             At OpenStax, we’re committed to ensuring that our websites and learning materials are as accessible as possible to the widest possible audience.
         </p>
 
-        <h2>Web Accessibility:</h2>
+        <h2>Web Accessibility</h2>
 
         <p>Our goal is to ensure that all OpenStax websites and the “Web View” versions of our learning materials follow accessible web design best practices, so that they will meet the W3C-WAI Web Content Accessibility Guidelines (WCAG) 2.0 at Level AA and Section 508 of the Rehabilitation Act.
         </p>
 
-        <h2>Feedback:</h2>
+        <h2>Feedback</h2>
 
         <p>You can help us to meet our accessibility goals by letting us know about your experience using OpenStax by emailing us at info@openstax.org.
         </p>
