Added Junction as an Ally resource

--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -104,6 +104,7 @@
                      <option value="Cerego">Cerego</option>
                      <option value="Courseweaver">Courseweaver</option>
                      <option value="Expert TA">Expert TA</option>
+                     <option value="Junction">Junction</option>
                      <option value="Lrnr">Lrnr</option>
                      <option value="Sapling Learning">Sapling Learning</option>
                      <option value="SimBio">SimBio</option>
