Fix assorted minor bugs
Add $ to Amazon price
Constrain about-us headshot text width
Fix allies data fetch
Add withCredentials to user info fetch
Put API host into settings.js and use that in usermodel and pagemodel

--- a/src/app/pages/about-us/about-us.scss
+++ b/src/app/pages/about-us/about-us.scss
@@ -143,6 +143,7 @@
 
             .title {
                 margin-left: 5%;
+                max-width: 20rem;
                 text-align: center;
                 width: 90%;
             }
