--- a/src/app/pages/contact/contact.hbs
+++ b/src/app/pages/contact/contact.hbs
@@ -9,7 +9,7 @@
         <p class="subhead">
             If you have question or feedback, drop us a line!
         </p>
-        <form action="/mail/send_mail">
+        <form action="/api/mail/send_mail/" method="post">
             <div class="labeled-control">
                 What is your question about?
                 <select>
