--- a/src/app/pages/finish-profile/finish-profile.hbs
+++ b/src/app/pages/finish-profile/finish-profile.hbs
@@ -54,7 +54,8 @@
         <fieldset id="faculty-section">
         </fieldset>
     </fieldset>
-    <div>
+    <div class="submit-zone">
         <input type="submit" value="Finish profile" role="button" />
+        <span id="problem-message"></span>
     </div>
 </form>
