Updated links for butons on home page and CNX link where it is used

--- a/src/app/components/products-boxes/products-boxes.hbs
+++ b/src/app/components/products-boxes/products-boxes.hbs
@@ -18,7 +18,7 @@
             <div class="caption">
                 <h3 class="title">OpenStax CNX</h3>
                 <p class="blurb">OpenStax CNX is an open library of educational content where anyone can contribute. View, share, and add material that you can remix and reuse for your course.</p>
-                <a class="btn" href="/cnx">Discover Free Content</a>
+                <a class="btn" href="https://cnx.org">Discover Free Content</a>
             </div>
         </div>
     </div>
