--- a/src/app/pages/home/education/education.hbs
+++ b/src/app/pages/home/education/education.hbs
@@ -21,13 +21,13 @@
     <div class="links">
         <ul>
             <li>
-                <a class="btn btn-large btn-orange higher-ed" href="/college">
+                <a class="btn btn-large btn-orange higher-ed" href="/higher-ed">
                     <span class="title">Higher Education</span>
                     <span class="blurb">Free, peer-reviewed college textbooks</span>
                 </a>
             </li>
             <li>
-                <a class="btn btn-large btn-yellow k-12" href="/k12">
+                <a class="btn btn-large btn-yellow k-12" href="/k-12">
                     <span class="title">K-12</span>
                     <span class="blurb">Adapative learning courseware and textbooks for AP<sup>&reg;</sup> courses</span>
                 </a>
