--- a/src/app/pages/home/banners/us-history/us-history.hbs
+++ b/src/app/pages/home/banners/us-history/us-history.hbs
@@ -2,38 +2,40 @@
     @import url(/app/pages/home/banners/us-history/us-history.css);
 </style>
 <div class="us-history">
-    <div class="john-adams"></div>
-    <div class="sacajawea"></div>
-    <div class="clermont"></div>
-    <div class="book"></div>
+    <div class="container">
+        <div class="john-adams"></div>
+        <div class="sacajawea"></div>
+        <div class="clermont"></div>
+        <div class="book"></div>
 
-    <div class="video-banner"></div>
-    <video class="video" autoplay>
-        <source src="images/home/subjects/us-history/video.mp4" type="video/mp4" />
-    </video>
+        <div class="video-banner"></div>
+        <video class="video" autoplay>
+            <source src="images/home/subjects/us-history/video.mp4" type="video/mp4" />
+        </video>
 
-    <div class="square-1"></div>
-    <div class="square-2"></div>
-    <div class="square-3"></div>
-    <div class="square-4"></div>
+        <div class="square-1"></div>
+        <div class="square-2"></div>
+        <div class="square-3"></div>
+        <div class="square-4"></div>
 
-    <div class="now-i-can">
-        <span>Now I can</span>
-        <span class="quote">Travel back in time</span>
-    </div>
+        <div class="now-i-can">
+            <span>Now I can</span>
+            <span class="quote">Travel back in time</span>
+        </div>
 
-    <div class="subject-links">
-        <ul>
-            <li>
-                <a class="btn btn-large btn-orange explore-subject" href="/subjects/history">
-                    Explore U.S. History
-                </a>
-            </li>
-            <li>
-                <a class="btn btn-large btn-blue explore-all" href="/subjects">
-                    Explore All Subjects
-                </a>
-            </li>
-        </ul>
+        <div class="subject-links">
+            <ul>
+                <li>
+                    <a class="btn btn-large btn-orange explore-subject" href="/details?us-history">
+                        Explore U.S. History
+                    </a>
+                </li>
+                <li>
+                    <a class="btn btn-large btn-blue explore-all" href="/subjects">
+                        Explore All Subjects
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
