--- a/src/app/pages/finished-no-verify/finished-no-verify.hbs
+++ b/src/app/pages/finished-no-verify/finished-no-verify.hbs
@@ -1,7 +1,5 @@
 <h1>Thanks.</h1>
 <p>
-    We manually verify that you are a faculty member and this process can take
-    up to three business days. You will receive an email notification once we
-    have confirmed your faculty status. Until then, you won’t be able to
-    download faculty-only materials.
+    If you need faculty-only resources, you will need to get your account
+    verified.
 </p>
