--- a/src/app/components/quotes/quotes.hbs
+++ b/src/app/components/quotes/quotes.hbs
@@ -3,33 +3,30 @@
 </style>
 <div class="quotes">
     <div class="quote-bucket right">
-        <div class="image juan"></div>
+        <div class="image"></div>
         <div class="quote">
             <blockquote>
-                At first I was like, nope, and now I'm like, yep!<br />
-                &mdash; <cite>Juan C.</cite>
+                We’re recruiting for our Fall 2016 pilot of Concept Coach!
             </blockquote>
-            <!-- <a class="btn btn-orange" href="#">Read It</a> -->
+            <a class="btn btn-orange" href="http://cc.openstax.org">Learn More</a>
         </div>
     </div>
 
     <div class="quote-bucket left">
-        <div class="image school"></div>
+        <div class="image"></div>
         <div class="quote">
             <blockquote>
-                Here is a place where some cool stuff happened.<br />
-                Check it out.
+                OpenStax is supported by major philanthropic foundations
             </blockquote>
-            <!-- <a class="btn btn-orange" href="#">Read It</a> -->
+            <a class="btn btn-orange" href="/foundation">Learn More</a>
         </div>
     </div>
 
     <div class="quote-bucket full">
         <div class="quote">
             <blockquote>
-                No picture, no big deal.
-                Talking about how great something is. "It could be a
-                testimonial from a teacher."
+                “OpenStax is AMAZING. Access to these high quality textbooks is GAME CHANGING for our students.”
+                <span>&mdash; <cite>Prof. Wendy Riggs, College of the Redwoods</cite></span>
             </blockquote>
             <!-- <a class="btn" href="#">Read It</a> -->
         </div>
