--- a/src/app/pages/k-12/k-12.hbs
+++ b/src/app/pages/k-12/k-12.hbs
@@ -1,15 +1,16 @@
 <style scoped>
     @import url(/app/pages/k-12/k-12.css);
+    @import url(/app/components/buckets/buckets.css);
 </style>
 <div class="k-12-page">
     <main id="maincontent">
         <div class="banner"></div>
-        <div class="quotes"></div>
+        <div class="quote-buckets"></div>
         <div class="tutor-banner" id="tutor">
             <img class="tutor-bg-overlay" src="/images/k-12/paper-plane.svg" />
         </div>
         {{{strips}}}
         <div class="products"></div>
-        <div class="buckets"></div>
+        <div class="buckets-section"></div>
     </main>
 </div>
