--- a/src/app/pages/k-12/k-12.scss
+++ b/src/app/pages/k-12/k-12.scss
@@ -4,16 +4,23 @@
 .k-12-page {
     flex: 1 0 auto;
 
-    .quotes-buckets {
+    .quote-buckets {
         background-color: lighten(color(neutral-lighter), 8%);
 
         .quotes {
-            padding: 8rem 0;
-            width: 90vw;
+            padding: 8rem 1.5rem;
 
             .quote-bucket {
                 margin: 0;
-                max-width: 97rem;
+                font-size: 1.6rem;
+
+                @include desktop {
+                    max-width: 80%;
+                }
+
+                &:not(.right) {
+                    display: none;
+                }
 
                 .image {
                     background-color: color(blue);
@@ -22,6 +29,10 @@
                     background-repeat: no-repeat;
                     background-size: cover;
                     max-width: 40rem;
+                }
+
+                .btn {
+                    align-self: flex-start;
                 }
             }
         }
@@ -33,4 +44,3 @@
         }
     }
 }
-
