Handle errata link and finish coloring about-us blocks

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -14,7 +14,7 @@
                         </div>
                         <a href="#resources" class="tab"><span>Resources</span></a>
                         <a href="#details" class="tab"><span>Details</span></a>
-                        <a href="#errata" class="tab"><span>Errata</span></a>
+                        <a href="#errata" class="tab errata-tab"><span>Errata</span></a>
                     </div>
                     <p class="blurb"></p>
                     <h2>Senior Contributing Authors</h2>
