Make links in the orange box on Higher Ed
Adjusted single-select proxy to allow value-setting
Made contact-us page take an argument for the initial subject selection

--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -28,7 +28,7 @@
                         available online. Review a book or chapter and see
                         the quality for yourself.
                     </div>
-                    <div class="more">View Books</div>
+                    <div class="more"><a href="/subjects">View Books</a></div>
                 </li>
 
                 <li class="step">
@@ -38,7 +38,7 @@
                         like test banks and solution manuals to plan your
                         course.
                     </div>
-                    <div class="more">Create Account</div>
+                    <div class="more"><a class="login-link">Create Account</a></div>
                 </li>
 
                 <li class="step">
@@ -49,7 +49,7 @@
                         students! You can also recommend a book as an
                         optional extra resource.
                     </div>
-                    <div class="more">Adopt</div>
+                    <div class="more"><a href="/adoption">Adopt</a></div>
                 </li>
             </ol>
 
@@ -60,7 +60,7 @@
                     of OpenStax textbooks at your institution, we are here to
                     support you!
                 </div>
-                <div class="more">Learn More</div>
+                <div class="more"><a href="/contact?subject=College/University Partnerships">Learn More</a></div>
             </div>
         </div>
 
