Move About Us menu and add Explore Our Impact menu

--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -8,7 +8,7 @@
         <div class="container">
             <ul class="nav-menu meta-menu" role="menu" aria-label="Meta navigation menu">
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
-                <!--<li class="nav-menu-item"><a href="/give" role="menuitem">Give</a></li>-->
+                <li class="nav-menu-item"><a href="/about-us" role="menuitem">Who We Are</a></li>
                 <li class="nav-menu-item login"><a href="#" role="menuitem">Login</a></li>
             </ul>
             <span class="logo-wrapper">
@@ -53,7 +53,7 @@
                 <li class="nav-menu-item dropdown" role="presentation">
                     <a href="/impact" role="menuitem" aria-haspopup="true">Our Impact</a>
                     <ul class="dropdown-menu" role="menu" aria-expanded="false" aria-label="Our Impact menu">
-                        <li><a href="/about-us" role="menuitem" tabindex="-1">Who We Are</a></li>
+                        <li><a href="/impact" role="menuitem" tabindex="-1">Explore Our Impact</a></li>
                         <li><a href="/allies" role="menuitem" tabindex="-1">Allies</a></li>
                         <li><a href="/foundation" role="menuitem" tabindex="-1">Foundation Support</a></li>
                     </ul>
