Fix banner styling on k-12 page for Firefox
Firefox did not like the banner view pulling its own scoped scss file.
Moving the import statement to the page stylesheet fixed it.

--- a/src/app/pages/about-us/about-us.scss
+++ b/src/app/pages/about-us/about-us.scss
@@ -2,6 +2,11 @@
 @import 'mixins';
 
 .about-us-page {
+
+    @media (max-width: 1300px) {
+        max-width: 94%;
+    }
+
     .hero {
         background-color: color(gray);
         color: color(neutral-lightest);
