--- a/src/app/pages/k-12/k-12.hbs
+++ b/src/app/pages/k-12/k-12.hbs
@@ -1,6 +1,7 @@
 <style scoped>
     @import url(/app/pages/k-12/k-12.css);
     @import url(/app/components/buckets/buckets.css);
+    @import url(/app/pages/k-12/banner/banner.css);
 </style>
 <div class="k-12-page">
     <main id="maincontent">
