--- a/src/app/components/shell/header/header.hbs
+++ b/src/app/components/shell/header/header.hbs
@@ -7,8 +7,8 @@
     <nav class="meta-nav">
         <div class="container">
             <ul class="nav-menu meta-menu" role="menu" aria-label="Meta navigation menu">
+                <li class="nav-menu-item"><a href="/about-us" role="menuitem">About</a></li>
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
-                <li class="nav-menu-item"><a href="/about-us" role="menuitem">Who We Are</a></li>
                 <li class="nav-menu-item login"><a href="#" role="menuitem">Login</a></li>
             </ul>
             <span class="logo-wrapper">
@@ -41,7 +41,7 @@
                         <li role="presentation"><a href="/subjects/science" role="menuitem" tabindex="-1">Science</a></li>
                         <li role="presentation"><a href="/subjects/social-sciences" role="menuitem" tabindex="-1">Social Sciences</a></li>
                         <li role="presentation"><a href="/subjects/history" role="menuitem" tabindex="-1">History</a></li>
-                        <li role="presentation"><a href="/subjects/ap" role="menuitem" tabindex="-1">AP</a></li>
+                        <li role="presentation"><a href="/subjects/ap" role="menuitem" tabindex="-1">AP<sup>&reg;</sup></a></li>
                     </ul>
                 </li>
                 <li class="nav-menu-item" role="presentation">
